test/for/fun_in_body.lox
// error: expect variable name
for () fn foo() {}